gotta fix the annoying double borders

--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -357,3 +357,6 @@ h1 {
 	padding: 0 0 0 5px;
 }
 
+#topic:not(:empty) {
+	border-bottom: 1px solid #999999;
+}
